<resources>
    <string name="app_name">TestApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="email">E-mail:</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="click_here_to_register"><u>Click here to register!</u></string>

    <string name="my_pokemon_collection">My pokemon collection</string>
    <string name="add_new_pokemon">Add new pokemon</string>

    <string name="unknown">\?\?\?</string>

    <string name="pokemon_details">Pokemon details</string>
    <string name="ability">Ability</string>
    <string name="stats">Stats</string>
    <string name="stat">Stat</string>
    <string name="hp">HP:</string>
    <string name="attack">Attack:</string>
    <string name="defense">Defense:</string>
    <string name="special_attack">Sp. Atk:</string>
    <string name="special_defense">Sp. Def:</string>
    <string name="speed">Speed:</string>

    <string name="value">Value</string>
    <string name="base">Base</string>
    <string name="ivs">IVs</string>
    <string name="evs">EVs</string>
    <string name="moves">Moves</string>
    <string name="edit_pokemon">Edit</string>
    <string name="qr_code">QR code</string>
    <string name="delete">Delete</string>
    <string name="do_you_really_want_to_delete_this_pokemon">Do you really want to delete this pokemon?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="empty"></string>
    <string name="add_pokemon">Add pokemon</string>
    <string name="choose_species">Choose species</string>
    <string name="choose_ability">Choose ability</string>
    <string name="choose_stats_related">Choose stats related</string>
    <string name="choose_moves">Choose moves</string>
    <string name="change_species">Change species</string>
    <string name="change_ability">Change ability</string>
    <string name="change_stats_related">Change stats related</string>
    <string name="change_moves">Change moves</string>
    <string name="level">Level:</string>
    <string name="nature">Nature:</string>
    <string name="ok">OK</string>

    <string name="move">MOVE</string>
    <string name="type">TYPE</string>
    <string name="category">CATEGORY</string>
    <string name="power">POWER</string>
    <string name="accuracy">ACCURACY</string>
    <string name="pp">PP</string>
    <string name="change">Chg</string>
    <string name="del">Del</string>
    <string name="add_move">Add move</string>
    <string name="finalize">Finalize</string>
    <string name="give_your_setup_a_name">Give your setup a name:</string>

    <string name="cat">CAT</string>
    <string name="pow">POW</string>
    <string name="acc">ACC</string>

    <string name="scan_qr_code">Scan QR Code</string>

    <string name="todo">TODO</string>
    <string name="final_stats">Final stats</string>
</resources>