<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/login">

    <fragment
        android:id="@+id/login"
        android:name="com.example.testapp.activities.LoginActivity"
        android:label="@string/login"
        tools:layout="@layout/login">

        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/register" />
        <action
            android:id="@+id/action_login_to_pokemonCollection"
            app:destination="@id/pokemonCollection" />
    </fragment>
    <fragment
        android:id="@+id/register"
        android:name="com.example.testapp.activities.RegisterActivity"
        android:label="@string/register"
        tools:layout="@layout/register">

        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/login" />
    </fragment>
    <fragment
        android:id="@+id/pokemonCollection"
        android:name="com.example.testapp.activities.PokemonCollection"
        android:label="@string/my_pokemon_collection"
        tools:layout="@layout/pokemon_collection">
        <action
            android:id="@+id/action_pokemonCollection_to_pokemonDetails"
            app:destination="@id/pokemonDetails" />
        <action
            android:id="@+id/action_pokemonCollection_to_addPokemon"
            app:destination="@id/addPokemon" />
    </fragment>
    <fragment
        android:id="@+id/pokemonDetails"
        android:name="com.example.testapp.activities.PokemonDetails"
        android:label="@string/pokemon_details">
        <action
            android:id="@+id/action_pokemonDetails_to_pokemonCollection"
            app:destination="@id/pokemonCollection" />
    </fragment>
    <fragment
        android:id="@+id/addPokemon"
        android:name="com.example.testapp.activities.AddPokemon"
        android:label="@string/add_pokemon" />
</navigation>