<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/f_a_p_chosen_species"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="90"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/f_a_p_sprite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:background="@color/analogous_1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="60"
                android:background="@color/analogous_2"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/f_a_p_species"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="90"
                android:background="@color/analogous_3"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/f_a_p_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:background="@color/analogous_4"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/f_a_p_type1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/unknown"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/f_a_p_type2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/unknown"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/f_a_p_species_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="94"
            android:background="@color/analogous_1"
            android:text="@string/choose_species" />

        <LinearLayout
            android:id="@+id/f_a_p_chosen_ability"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="94"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/f_a_p_ability_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:background="@color/analogous_1"
                android:gravity="center"
                android:text="@string/unknown" />

            <TextView
                android:id="@+id/f_a_p_ability_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:background="@color/analogous_2"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/unknown" />
        </LinearLayout>

        <Button
            android:id="@+id/f_a_p_abilities_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="94"
            android:background="@color/main_color"
            android:text="@string/choose_ability" />

        <LinearLayout
            android:id="@+id/f_a_p_chosen_stats"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="84"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="75"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/analogous_1"
                    android:gravity="center"
                    android:text="@string/level" />

                <TextView
                    android:id="@+id/f_a_p_level"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/analogous_1"
                    android:gravity="center"
                    android:text="@string/unknown" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/analogous_2"
                    android:gravity="center"
                    android:text="@string/nature" />

                <TextView
                    android:id="@+id/f_a_p_nature"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/analogous_2"
                    android:gravity="center"
                    android:text="@string/unknown" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="75"
                android:background="@color/analogous_3"
                android:gravity="center"
                android:text="@string/stats" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/analogous_4"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="16"
                        android:gravity="center"
                        android:text="@string/hp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="16"
                        android:gravity="center"
                        android:text="@string/attack" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="16"
                        android:gravity="center"
                        android:text="@string/defense" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="16"
                        android:gravity="center"
                        android:text="@string/special_attack" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="16"
                        android:gravity="center"
                        android:text="@string/special_defense" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="16"
                        android:gravity="center"
                        android:text="@string/speed" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/analogous_5"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/f_a_p_hp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="16"
                        android:gravity="center"
                        android:text="@string/unknown" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/f_a_p_attack"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="16"
                        android:gravity="center"
                        android:text="@string/unknown" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/f_a_p_defense"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="16"
                        android:gravity="center"
                        android:text="@string/unknown" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/f_a_p_special_attack"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="16"
                        android:gravity="center"
                        android:text="@string/unknown" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/f_a_p_special_defense"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="16"
                        android:gravity="center"
                        android:text="@string/unknown" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/f_a_p_speed"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="16"
                        android:gravity="center"
                        android:text="@string/unknown" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/f_a_p_stats_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="94"
            android:background="@color/main_color"
            android:text="@string/choose_stats_related" />

        <ListView
            android:id="@+id/f_a_p_moves"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="66" />

        <View
            android:id="@+id/f_a_p_space"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="100" />

        <Button
            android:id="@+id/f_a_p_add_move"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="89"
            android:text="@string/add_move"
            android:visibility="gone" />

        <Button
            android:id="@+id/f_a_p_finalize"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="94"
            android:background="@color/main_color"
            android:text="@string/finalize" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>